# controllers/userController.go
@@ -3,7 +3,9 @@ package controllers
 import (
 	"net/http"
 
+	"daoduy.com/hoc-golang/exception"
 	"daoduy.com/hoc-golang/models/request"
+	"daoduy.com/hoc-golang/models/response"
 	"daoduy.com/hoc-golang/services"
 	"github.com/gin-gonic/gin"
 )
@@ -17,10 +19,27 @@ import (
 func GetAllUsers(ctx *gin.Context) {
 	users, err := services.GetAllUsers()
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		ctx.Error(exception.NewAppException(exception.UncategorizedException))
 		return
 	}
-	ctx.JSON(http.StatusOK, users)
+	ctx.JSON(http.StatusOK, response.Success(users))
+}
+
+// @Summary Lấy thông tin người dùng theo ID
+// @Description Trả về thông tin chi tiết của người dùng theo ID
+// @Tags User
+// @Produce json
+// @Param id path string true "ID của người dùng"
+// @Success 200 {object} response.UserResponse
+// @Router /users/{id} [get]
+func GetUserById(ctx *gin.Context) {
+	id := ctx.Param("id")
+	user, err := services.GetUserById(id)
+	if err != nil {
+		ctx.Error(exception.NewAppException(exception.UncategorizedException))
+		return
+	}
+	ctx.JSON(http.StatusOK, response.Success(user))
 }
 
 // @Summary Tạo mới người dùng
@@ -29,20 +48,21 @@ func GetAllUsers(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param request body request.CreateUserRequest true "Thông tin tạo người dùng"
-// @Success 200 {object} models.User
-// @Failure 400 {string} string "Lỗi dữ liệu"
+// @Success 201 {object} models.User
+// @Failure 400 {object} response.ApiResponse
+// @Failure 500 {object} response.ApiResponse
 // @Router /users/ [post]
 func CreateUser(ctx *gin.Context) {
 	var user request.CreateUserRequest
 	if err := ctx.ShouldBindJSON(&user); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Dữ liệu không hợp lệ"})
+		ctx.Error(exception.NewAppException(exception.InvalidKey))
 		return
 	}
 
 	newUser, err := services.CreateUser(user)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		ctx.Error(err)
 		return
 	}
-	ctx.JSON(http.StatusCreated, newUser)
+	ctx.JSON(http.StatusCreated, response.Success(newUser))
 }
