# models/request/LogoutRequest.go
@@ -1,0 +1,5 @@
+package request
+
+type LogoutRequest struct {
+	Token string `json:"token" binding:"required"`
+}
